--- a/projects/fl-framework-angular/package.json
+++ b/projects/fl-framework-angular/package.json
@@ -4,7 +4,12 @@
   "license" : "MIT",
   "peerDependencies": {
     "@angular/common": "^7.1.0",
-    "@angular/core": "^7.1.0"
+    "@angular/core": "^7.1.0",
+    "@angular/flex-layout": "^7.0.0-beta.22"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/neut-funahashi/fl-framework-app/tree/master/projects/fl-framework-angular"
   },
   "keywords": [
     "angular"
