--- a/projects/fl-framework-angular/package.json
+++ b/projects/fl-framework-angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fl-framework-angular",
-  "version": "1.0.0-alpha.2",
+  "version": "1.0.1",
   "license" : "MIT",
   "peerDependencies": {
     "@angular/common": "^7.1.0",
