--- a/angular.json
+++ b/angular.json
@@ -136,13 +136,13 @@
           "options": {
             "tsConfig": "projects/fl-framework-angular/tsconfig.lib.json",
             "project": "projects/fl-framework-angular/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/fl-framework-angular/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -166,5 +166,8 @@
       }
     }
   },
-  "defaultProject": "framework-app"
+  "defaultProject": "framework-app",
+  "cli": {
+    "analytics": false
+  }
 }
