--- a/angular.json
+++ b/angular.json
@@ -44,7 +44,6 @@
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
-              "extractCss": true,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -132,7 +131,7 @@
       "prefix": "fl",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
             "tsConfig": "projects/fl-framework-angular/tsconfig.lib.json",
             "project": "projects/fl-framework-angular/ng-package.json"
