--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~11.2.14",
     "@angular/router": "~11.2.14",
     "rxjs": "~6.6.2",
+    "scss-bundle": "^2.5.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
