--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-lib": "ng build fl-framework-angular --configuration production",
+    "build-lib": "ng build fl-framework-angular --prod",
     "postbuild-lib": "scss-bundle -c projects/fl-framework-angular/scss-bundle.config.json"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.2.4",
-    "@angular/cdk": "^11.2.13",
+    "@angular/cdk": "^12.2.4",
     "@angular/common": "~12.2.4",
     "@angular/compiler": "~12.2.4",
     "@angular/core": "~12.2.4",
+    "@angular/flex-layout": "^12.0.0-beta.34",
     "@angular/forms": "~12.2.4",
-    "@angular/material": "^11.2.13",
+    "@angular/material": "^12.2.4",
     "@angular/platform-browser": "~12.2.4",
     "@angular/platform-browser-dynamic": "~12.2.4",
     "@angular/router": "~12.2.4",
